--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-grid-layout": "^0.16.6"
+    "react-grid-layout": "^0.16.6",
+    "react-vis": "^1.9.2"
   },
   "devDependencies": {
     "prettier": "^1.12.1",
