--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-grid-layout": "^0.16.6",
+    "react-loadable": "^5.4.0",
     "react-vis": "^1.9.2"
   },
   "devDependencies": {
